service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-backend
spec:
  type: NodePort
  selector:
    app: todo-list-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007  # Bu port numarasını istediğiniz şekilde belirleyebilirsiniz, 30000-32767 aralığında olmalıdır
---
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres
spec:
  type: NodePort
  selector:
    app: todo-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30008  # Bu port numarasını istediğiniz şekilde belirleyebilirsiniz, 30000-32767 aralığında olmalıdır
